syntax = "proto3";

message SearchRequest {
  string query = 1;
  int32  page_number = 2;
  int32  result_per_page = 3;
}

message Server {
  string hostname = 1;
  int32 port = 2;
}

message WebSite {
  string name = 1;
  string link = 2;
  int32 age = 3;
  map<string, Server> server = 4;
  repeated string a = 5;
  bytes b = 6;
}

service RustFFI {
  rpc SearchWebSite (SearchRequest) returns (WebSite) {}
}

message Client {
  string ip = 1;
  string city = 2;
}

service GoFFI {
  rpc SearchClient (SearchRequest) returns (Client) {}
}
